force-app/main/default/objects/Weather_Widget_Metadata__mdt/Weather_Widget_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>Weather Widget Setting</label>
    <pluralLabel>Weather Widget Settings</pluralLabel>
</CustomObject>