force-app/main/default/objects/Weather_Widget_Metadata__mdt/fields/Geocode_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Geocode_API_Key__c</fullName>
    <label>Geocode API Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>