force-app/main/default/objects/Weather_Widget_Metadata__mdt/fields/Geocoding_API_URL__c.field-meta.xml
<CustomField>
    <fullName>Geocoding_API_URL__c</fullName>
    <label>Geocoding API_URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>