force-app/main/default/objects/Weather_Widget_Metadata__mdt/fields/Weather_API_URL__c.field-meta.xml
<CustomField>
    <fullName>Weather_API_URL__c</fullName>
    <label>Weather API URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>