force-app/main/default/objects/Weather_Widget_Metadata__mdt/fields/Weather_API_Username__c.field-meta.xml
<CustomField>
    <fullName>Weather_API_Username__c</fullName>
    <label>Weather API Username</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>